# soniox-rs

./: Cargo.toml  LICENSE  README.md  flake.nix
examples/: auth.rs  models.rs
src/: client.rs  error.rs  lib.rs  request.rs
src/models/: auth.rs  error.rs  models.rs
