[package]
name = "soniox-rs"
version = "0.1.0"
edition = "2024"
description = "An unofficial Rust binding for Soniox API"
readme = "README.md"
repository = "https://github.com/merrkry/soniox-rs"
license = "MIT"
keywords = ["api", "soniox"]
categories = ["api-bindings", "web-programming", "asynchronous"]

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
derive_builder = "0.20.2"
reqwest = "0.12.24"
serde = "1.0.228"
thiserror = "2.0.17"
url = "2.5.7"
uuid = { version = "1.18.1", features = ["serde"] }
