[package]
name = "soniox-rs"
version = "0.1.0"
edition = "2024"
description = "An unofficial Rust binding for Soniox API"
readme = "README.md"
repository = "https://github.com/merrkry/soniox-rs"
license = "MIT"
keywords = ["api", "soniox"]
categories = ["api-bindings", "web-programming", "asynchronous"]

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
derive_builder = "0.20.2"
http = "1.3.1"
reqwest = { version = "0.12.24", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"
url = "2.5.7"
uuid = { version = "1.18.1", features = ["serde"] }
